--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ env:
     - RELEASES_PATH=/tmp/releases
 
 before_script:
-  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+  - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.24.0
+
 
 script:
   - go test -bench= -test.v  ./...
