--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,13 @@ env:
     - RELEASES_PATH=/tmp/releases
 
 before_script:
-  - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.24.0
+  # - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.24.0
 
 
 script:
   - go test -bench= -test.v  ./...
-  - golangci-lint run
+  - docker run -ti --rm -v $(pwd):/app -w /app golangci/golangci-lint:v1.24.0 golangci-lint run -v
+  # - golangci-lint run
 
 before_deploy:
   # Set up git user name and tag this commit
