--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 
 
 script:
-  - go test -bench= -test.v  ./...
+  - go test -bench=  -race -test.v  ./...
   - docker run -ti --rm -v $(pwd):/app -w /app golangci/golangci-lint:v1.24.0 golangci-lint run -v
   # - golangci-lint run
 
